tests/ui/error-codes/E0642-2015.stderr
error: patterns aren't allowed in trait methods in the 2015 edition
  --> $DIR/E0642-2015.rs:9:12
   |
LL |     fn foo((x, y): (i32, i32));
   |            ^^^^^^
   |
   = note: upgrading editions will fix this error
help: in this edition, give this argument a name or use an underscore to ignore it
   |
LL -     fn foo((x, y): (i32, i32));
LL +     fn foo(_: (i32, i32));
   |

error: patterns aren't allowed in trait methods in the 2015 edition
  --> $DIR/E0642-2015.rs:11:12
   |
LL |     fn bar((x, y): (i32, i32)) {}
   |            ^^^^^^
   |
   = note: upgrading editions will fix this error
help: in this edition, give this argument a name or use an underscore to ignore it
   |
LL -     fn bar((x, y): (i32, i32)) {}
LL +     fn bar(_: (i32, i32)) {}
   |

error: patterns aren't allowed in trait methods in the 2015 edition
  --> $DIR/E0642-2015.rs:12:15
   |
LL |     fn method(S { .. }: S) {}
   |               ^^^^^^^^
   |
   = note: upgrading editions will fix this error
help: in this edition, give this argument a name or use an underscore to ignore it
   |
LL -     fn method(S { .. }: S) {}
LL +     fn method(_: S) {}
   |

error: aborting due to 3 previous errors

